<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_lightPrimary"
    tools:context=".RegisterPage">


    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:src="@drawable/blue_icon" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/register_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/et_background"
        android:backgroundTint="@color/blur_grey"
        android:hint="@string/enterEMail"
        android:padding="16dp" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/register_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/et_background"
        android:backgroundTint="@color/blur_grey"
        android:hint="@string/enterPassword"
        android:padding="16dp" />




    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register"
        android:background="@drawable/et_background"/>

    <TextView
        android:id="@+id/alreadyUserTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already User?"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:padding="4dp"
        android:layout_gravity="center"/>

</LinearLayout>