<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:src="@drawable/blue_icon" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/et_background"
        android:backgroundTint="@color/blur_grey"
        android:hint="@string/enterEMail"
        android:padding="16dp" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/et_background"
        android:backgroundTint="@color/blur_grey"
        android:hint="@string/enterPassword"
        android:padding="16dp" />

    <TextView
        android:id="@+id/forgotPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/grey"
        android:padding="4dp"
        android:layout_gravity="end"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="Login"
        android:background="@drawable/et_background"/>

    <TextView
        android:id="@+id/createNewAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New User Registration?"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:padding="4dp"
        android:layout_gravity="center"/>

</LinearLayout>