<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:padding="12dp"
    android:background="@drawable/nav_item_background"
    android:backgroundTint="@color/blue_lightPrimary"
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    android:id="@+id/rlFav">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/favoriteImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/audi_default"
        app:shapeAppearanceOverlay="@style/shapeOverlay"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/favoriteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cullinan"
        android:layout_toEndOf="@id/favoriteImage"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:textColor="@color/blue_primary"
        android:layout_marginStart="12dp"
        android:layout_gravity="center"
        android:includeFontPadding="false"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/favoritePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rs 1.2Cr"
        android:textColor="@color/grey"
        android:layout_below="@id/favoriteName"
        android:layout_toEndOf="@id/favoriteImage"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favoritePrice"
        android:layout_toEndOf="@id/favoriteImage"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_availability"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/blue_primary"/>

        <ImageButton
            android:id="@+id/favShareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_share_24"
            android:background="@drawable/nav_item_background"
            app:tint="@color/blue_primary"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/share_details" />
    </LinearLayout>

    <Button
        android:id="@+id/buyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:layout_below="@id/favoriteImage"
        android:layout_marginTop="12dp"/>


    <Button
        android:id="@+id/removeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove Favorite"
        android:layout_below="@id/favoriteImage"
        android:layout_toEndOf="@id/buyBtn"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"/>



</RelativeLayout>