<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ItemDescriptionPage">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/shapeOverlay"
                android:src="@drawable/audi_default" />
            <RelativeLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/car_model_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:text="Phantom"
                    android:textColor="@color/blue_primary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/car_model_info_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/car_model_info_name"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:text="The legacy carrier"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/car_model_info_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:paddingTop="12dp"
                    android:text="Rs 1.2 Cr"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/car_model_info_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/car_model_info_price"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:text="2021"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/view_car_inner_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Inner"
                    app:drawableTopCompat="@drawable/baseline_control_camera_24" />

                <TextView
                    android:id="@+id/view_car_windows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Windows"
                    app:drawableTopCompat="@drawable/baseline_window_24" />


            </LinearLayout>

            <TextView
                android:id="@+id/view_car_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/about"
                android:textColor="@color/blue_primary"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/view_car_info_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/car_model_info_name"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:text="@string/amgDesc"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_appbar_height"
            android:text="Place Order"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/blue_primary"
            android:elevation="@dimen/custom_appbar_height"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_favorite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_appbar_height"
            android:fontFamily="@font/poppins_semibold"
            android:src="@drawable/baseline_favorite_border_24"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="42dp"
            app:backgroundTint="@color/white"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/favourite_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_appbar_height"
            android:fontFamily="@font/poppins_semibold"
            android:src="@drawable/baseline_ios_share_24"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:backgroundTint="@color/white"
            android:layout_below="@id/floating_favorite"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/favourite_button" />



    </RelativeLayout>




</LinearLayout>